Añadida validación formularios

--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
 
       <section class="contenedor sombra formulario-contacto">
         <h2>Contacto</h2>
-        <form>
+        <form id="formulario">
           <fieldset>
             <legend>Contáctame</legend>
 
@@ -102,6 +102,7 @@
                   class="input-text"
                   type="text"
                   id="nombre"
+                  name="nombre"
                   placeholder="Tu Nombre"
                 />
               </div>
@@ -111,6 +112,7 @@
                   class="input-text"
                   type="tel"
                   id="telefono"
+                  name="telefono"
                   placeholder="Tu Teléfono"
                 />
               </div>
@@ -120,6 +122,7 @@
                   class="input-text"
                   type="email"
                   id="correo"
+                  name="correo"
                   placeholder="Tu Email"
                 />
               </div>
@@ -128,6 +131,7 @@
                 <textarea
                   class="input-text"
                   id="mensaje"
+                  name="mensaje"
                   placeholder="Expón cuál es tu proyecto, qué tipo de web y funcionalidad quieres que implementemos"
                 ></textarea>
               </div>
@@ -135,7 +139,9 @@
             <!-- .contenedor-campos -->
 
             <div class="alinear-derecha flex">
-              <input class="boton w-sm-100" type="submit" value="Enviar" />
+              <button class="boton w-sm-100" type="submit" disabled>
+                Enviar
+              </button>
             </div>
           </fieldset>
         </form>
@@ -145,5 +151,6 @@
     <footer class="footer">
       <p>Todos los derechos reservados. Jose Ramon</p>
     </footer>
+    <script src="js/validacion-form.js" type="module"></script>
   </body>
 </html>
