--- a/src/contacto.html
+++ b/src/contacto.html
@@ -29,43 +29,51 @@
     <main class="contenedor sombra formulario-contacto">
       <h3>Rellene el formulario de contacto</h3>
 
-      <form>
+      <form id="formulario">
         <fieldset>
           <legend>&nbsp;Información Personal&nbsp;</legend>
-
-          <label for="nombre">Nombre</label>
-          <input
-            class="input-text"
-            type="text"
-            placeholder="Tu Nombre"
-            id="nombre"
-          />
-
-          <label for="email">E-mail</label>
-          <input
-            class="input-text"
-            type="email"
-            placeholder="Tu Email"
-            id="email"
-          />
-
-          <label for="telefono">Teléfono</label>
-          <input
-            class="input-text"
-            type="tel"
-            placeholder="Tu Teléfono"
-            id="telefono"
-          />
-
-          <label for="mensaje">Mensaje:</label>
-          <textarea
-            class="input-text"
-            placeholder="Expón cuál es tu proyecto, qué tipo de web y funcionalidad quieres que implementemos"
-            id="mensaje"
-          ></textarea>
+          <div class="campo">
+            <label for="nombre">Nombre</label>
+            <input
+              class="input-text"
+              type="text"
+              placeholder="Tu Nombre"
+              id="nombre"
+              name="nombre"
+            />
+          </div>
+          <div class="campo">
+            <label for="telefono">Teléfono</label>
+            <input
+              class="input-text"
+              type="tel"
+              placeholder="Tu Teléfono"
+              id="telefono"
+              name="telefono"
+            />
+          </div>
+          <div class="campo">
+            <label for="correo">E-mail</label>
+            <input
+              class="input-text"
+              type="email"
+              placeholder="Tu Email"
+              id="correo"
+              name="correo"
+            />
+          </div>
+          <div class="campo">
+            <label for="mensaje">Mensaje:</label>
+            <textarea
+              class="input-text"
+              placeholder="Expón cuál es tu proyecto, qué tipo de web y funcionalidad quieres que implementemos"
+              id="mensaje"
+              name="mensaje"
+            ></textarea>
+          </div>
         </fieldset>
         <div class="flex flex-end">
-          <input class="boton w-sm-100" type="submit" value="Enviar" />
+          <button class="boton w-sm-100" type="submit" disabled>Enviar</button>
         </div>
       </form>
     </main>
@@ -73,5 +81,6 @@
     <footer class="footer">
       <p>Todos los derechos reservados. Jose Ramon</p>
     </footer>
+    <script src="js/validacion-form.js" type="module"></script>
   </body>
 </html>
