Añadido favicon, cambiada imagen sobre-mi a bosquejo, cambio degradado fondo

--- a/src/sobre-mi.html
+++ b/src/sobre-mi.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Programador Web</title>
+    <link
+      rel="icon"
+      type="favicon/x-icon"
+      href="assets/img/foto-mia-favicon.png"
+    />
     <link rel="preload" href="css/styles.css" as="style" />
     <link href="css/styles.css" rel="stylesheet" />
   </head>
@@ -24,7 +29,11 @@
       <div class="contenido-sobre-mi">
         <div class="imagen">
           <picture>
-            <img loading="lazy" src="assets/img/foto-mia.png" alt="Sobre mí" />
+            <img
+              loading="lazy"
+              src="assets/img/foto-mia-bosquejo.png"
+              alt="Sobre mí"
+            />
           </picture>
         </div>
 
