--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Programador Web</title>
+    <link
+      rel="icon"
+      type="favicon/x-icon"
+      href="assets/img/foto-mia-favicon.png"
+    />
     <link rel="preload" href="css/styles.css" as="style" />
     <link href="css/styles.css" rel="stylesheet" />
   </head>
