Añadido icono-enlace twitter

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,12 @@
     <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body class="index-page">
-    <section class="titulo">
-      <h1>Jose Ramón <span>Programador Web</span></h1>
+    <section class="zona-titulo">
+      <h1>Jose&nbsp;Ramón <span>Programador&nbsp;Web</span></h1>
+      <a class="twitter-link" href="https://twitter.com/" target="_blank">
+        <img src="assets/img/svgrepo-twitter.svg" alt="icono de Twitter" />
+        <p class="tooltip-twitter">Mi&nbsp;Twitter</p>
+      </a>
     </section>
     <header>
       <div id="menu-movil" class="menu-movil">
@@ -69,11 +73,20 @@
           <div class="servicio">
             <h3>Frontend</h3>
             <div class="iconos">
-              <img src="assets/img/ti-brandHtml5.svg" alt="icono de html5" />
-              <img src="assets/img/ti-brandCss3.svg" alt="icono de css3" />
+              <img
+                src="assets/img/ti-brandHtml5.svg"
+                alt="icono de html5"
+                loading="lazy"
+              />
+              <img
+                src="assets/img/ti-brandCss3.svg"
+                alt="icono de css3"
+                loading="lazy"
+              />
               <img
                 src="assets/img/ti-brandJavascript.svg"
                 alt="icono de javascript"
+                loading="lazy"
               />
             </div>
             <p>
@@ -87,7 +100,11 @@
             <div class="iconos">
               <!--              <img src="assets/img/ti-api.svg" alt="icono de api" />-->
               <p class="text-img">API</p>
-              <img src="assets/img/ti-database.svg" alt="icono de database" />
+              <img
+                src="assets/img/ti-database.svg"
+                alt="icono de database"
+                loading="lazy"
+              />
             </div>
             <p>
               Backend. Creación de APIs que se comuniquen con Frontend.
@@ -101,9 +118,18 @@
               <img
                 src="assets/img/ti-cloudComputing.svg"
                 alt="icono de cloud computing"
+                loading="lazy"
               />
-              <img src="assets/img/ti-docker.svg" alt="icono de docker" />
-              <img src="assets/img/ti-aws.svg" alt="icono de api" />
+              <img
+                src="assets/img/ti-docker.svg"
+                alt="icono de docker"
+                loading="lazy"
+              />
+              <img
+                src="assets/img/ti-aws.svg"
+                alt="icono de api"
+                loading="lazy"
+              />
             </div>
             <p>
               Despliegue de aplicaciones web, empleando las últimas tecnologías
