Añadidos cambios titulo a todas las páginas, y cambio color primario

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,11 @@
   <body class="index-page">
     <section class="zona-titulo">
       <h1>Jose&nbsp;Ramón <span>Programador&nbsp;Web</span></h1>
-      <a class="twitter-link" href="https://twitter.com/" target="_blank">
+      <a
+        class="twitter-link"
+        href="https://twitter.com/JoseRamonSolvam"
+        target="_blank"
+      >
         <img src="assets/img/svgrepo-twitter.svg" alt="icono de Twitter" />
         <p class="tooltip-twitter">Mi&nbsp;Twitter</p>
       </a>
