--- a/src/sobre-mi.html
+++ b/src/sobre-mi.html
@@ -13,8 +13,16 @@
     <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body class="sobre-mi-page">
-    <section class="titulo">
-      <h1>Jose Ramón <span>Programador Web</span></h1>
+    <section class="zona-titulo">
+      <h1>Jose&nbsp;Ramón <span>Programador&nbsp;Web</span></h1>
+      <a
+        class="twitter-link"
+        href="https://twitter.com/JoseRamonSolvam"
+        target="_blank"
+      >
+        <img src="assets/img/svgrepo-twitter.svg" alt="icono de Twitter" />
+        <p class="tooltip-twitter">Mi&nbsp;Twitter</p>
+      </a>
     </section>
     <header>
       <div id="menu-movil" class="menu-movil">
