Trabajo listo para producción. Añadidos colores y fadein en pagina servicios, y carga imagenes webp

--- a/src/contacto.html
+++ b/src/contacto.html
@@ -20,7 +20,11 @@
         href="https://twitter.com/JoseRamonSolvam"
         target="_blank"
       >
-        <img src="assets/img/svgrepo-twitter.svg" alt="icono de Twitter" />
+        <img
+          src="assets/img/svgrepo-twitter.svg"
+          alt="icono de Twitter"
+          loading="lazy"
+        />
         <p class="tooltip-twitter">Mi&nbsp;Twitter</p>
       </a>
     </section>
