--- a/src/sobre-mi.html
+++ b/src/sobre-mi.html
@@ -20,7 +20,11 @@
         href="https://twitter.com/JoseRamonSolvam"
         target="_blank"
       >
-        <img src="assets/img/svgrepo-twitter.svg" alt="icono de Twitter" />
+        <img
+          src="assets/img/svgrepo-twitter.svg"
+          alt="icono de Twitter"
+          loading="lazy"
+        />
         <p class="tooltip-twitter">Mi&nbsp;Twitter</p>
       </a>
     </section>
@@ -58,6 +62,14 @@
       <div class="contenido-sobre-mi">
         <div class="imagen">
           <picture>
+            <source
+              srcset="assets/img/foto-mia-bosquejo.webp"
+              type="image/webp"
+            />
+            <source
+              srcset="assets/img/foto-mia-bosquejo.png"
+              type="image/png"
+            />
             <img
               loading="lazy"
               src="assets/img/foto-mia-bosquejo.png"
@@ -67,7 +79,7 @@
         </div>
 
         <div class="texto-sobre-mi">
-          <h3>Desarrollador web Freelance</h3>
+          <h3>Desarrollador web Freelancer</h3>
 
           <p>
             Soy un apasionado del diseño y programación web. Resido en Valencia
