--- a/src/servicios.html
+++ b/src/servicios.html
@@ -20,7 +20,11 @@
         href="https://twitter.com/JoseRamonSolvam"
         target="_blank"
       >
-        <img src="assets/img/svgrepo-twitter.svg" alt="icono de Twitter" />
+        <img
+          src="assets/img/svgrepo-twitter.svg"
+          alt="icono de Twitter"
+          loading="lazy"
+        />
         <p class="tooltip-twitter">Mi&nbsp;Twitter</p>
       </a>
     </section>
@@ -111,7 +115,7 @@
           </p>
         </div>
         <!--fin .servicio-card frontend-->
-        <div class="servicio-card diseño">
+        <div class="servicio-card design">
           <div class="iconos">
             <div class="icono">
               <img
