Extendidos los fadein a todas las cajas

--- a/src/contacto.html
+++ b/src/contacto.html
@@ -62,7 +62,10 @@
       <!-- .contenido-hero -->
     </section>
 
-    <main class="contenedor sombra formulario-contacto">
+    <main
+      id="contenedor-form-contacto"
+      class="contenedor sombra formulario-contacto"
+    >
       <h3>Rellene el formulario de contacto</h3>
 
       <form id="formulario">
