--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,10 @@
     </section>
 
     <main>
-      <section class="contenedor sombra resumen-servicios">
+      <section
+        id="resumen-servicios"
+        class="contenedor sombra resumen-servicios"
+      >
         <h2>
           Mis Servicios
           <span>
@@ -148,7 +151,10 @@
         <!--.servicios-->
       </section>
 
-      <section class="contenedor sombra formulario-contacto">
+      <section
+        id="contenedor-form-index"
+        class="contenedor sombra formulario-contacto"
+      >
         <h2>Contacto</h2>
         <form id="formulario">
           <fieldset>
