--- a/src/sobre-mi.html
+++ b/src/sobre-mi.html
@@ -56,7 +56,7 @@
       <a href="contacto.html">Contacto</a>
     </aside>
 
-    <main class="contenedor sombra sobre-mi">
+    <main id="sobre-mi" class="contenedor sombra sobre-mi">
       <h2>Sobre mi</h2>
 
       <div class="contenido-sobre-mi">
