Modificaciones en los fadein para hacerlos más visibles( con delay) y quitado el fadein de inicio a los que ya rebasan el scroll

--- a/src/servicios.html
+++ b/src/servicios.html
@@ -63,7 +63,7 @@
     <main class="contenedor sombra servicios">
       <h2>Servicios</h2>
       <div class="contenedor-servicios">
-        <div class="servicio-card frontend">
+        <div id="frontend-card" class="servicio-card frontend">
           <div class="iconos">
             <div class="icono">
               <img
@@ -119,7 +119,7 @@
           </p>
         </div>
         <!--fin .servicio-card frontend-->
-        <div class="servicio-card design">
+        <div id="design-card" class="servicio-card design">
           <div class="iconos">
             <div class="icono">
               <img
@@ -167,7 +167,7 @@
           </p>
         </div>
         <!--fin .servicio-card diseño-->
-        <div class="servicio-card api-db">
+        <div id="api-card" class="servicio-card api-db">
           <div class="iconos">
             <div class="icono">
               <p class="text-img">API</p>
@@ -236,7 +236,7 @@
           </p>
         </div>
         <!--fin .servicio-card api&db-->
-        <div class="servicio-card despliegue">
+        <div id="despliegue-card" class="servicio-card despliegue">
           <div class="iconos">
             <div class="icono">
               <img
@@ -293,7 +293,7 @@
           </p>
         </div>
         <!--fin .servicio-card despliegue-->
-        <div class="servicio-card optimizacion">
+        <div id="optimizacion-card" class="servicio-card optimizacion">
           <div class="iconos">
             <div class="icono">
               <p class="text-img">SEO</p>
@@ -331,7 +331,7 @@
           </p>
         </div>
         <!--servicio-card .optimización-->
-        <div class="servicio-card economico">
+        <div id="economico-card" class="servicio-card economico">
           <div class="iconos">
             <div class="icono">
               <p class="text-img">CMS</p>
@@ -395,7 +395,10 @@
     </main>
 
     <footer class="footer">
-      <p>Todos los derechos reservados. Jose Ramon</p>
+      <p>
+        Bajo licencia
+        CC-BY-NC-SA&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;Jose Ramón
+      </p>
     </footer>
     <script src="js/main.js" type="module"></script>
   </body>
