--- a/src/sobre-mi.html
+++ b/src/sobre-mi.html
@@ -153,7 +153,10 @@
     </main>
 
     <footer class="footer">
-      <p>Todos los derechos reservados. Jose Ramon</p>
+      <p>
+        Bajo licencia
+        CC-BY-NC-SA&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;Jose Ramón
+      </p>
     </footer>
     <script src="js/main.js" type="module"></script>
   </body>
