--- a/src/contacto.html
+++ b/src/contacto.html
@@ -122,7 +122,10 @@
     </main>
 
     <footer class="footer">
-      <p>Todos los derechos reservados. Jose Ramon</p>
+      <p>
+        Bajo licencia
+        CC-BY-NC-SA&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;Jose Ramón
+      </p>
     </footer>
     <script src="js/validacion-form.js" type="module"></script>
   </body>
